# llm

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  utils.md
Devlog/: day_4.md
docs/: Attention Is All You Need.md  git.md  repo.md  youtube.md
src/: checkpoint.py  count_parameters.py  data.py  download_shakespeare.py  generate.py  main.py  model.py  prepare_data.py  train.py
src/HF/: model.py
src/model/: Block.py  CausalSelfAttention.py  MLP.py  RoPE.py  config.py  huggingface_warpper.py  model.py
src/scripts/: download_shakespeare.py  generate.py  prepare_data.py
src/train/: checkpoint.py  data.py  tokenizer.py  train.py
