[project]
name = "llm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "tensorboard>=2.20.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.38",
]
